--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -1,4 +1,4 @@
-# (c) ECOLE POLYTECHNIQUE FEDERALE DE LAUSANNE, Switzerland, VPSI, 2017.
+# (c) ECOLE POLYTECHNIQUE FEDERALE DE LAUSANNE, Switzerland, VPSI, 2017-2018.
 # See the LICENSE file for more details.
 
 #
@@ -27,7 +27,7 @@ allow_leading_tabs = 0
 # POD section
 [Documentation::RequirePodSections]
 lib_sections = NAME | SYNOPSIS | DESCRIPTION | SUBROUTINES/METHODS | AUTHOR | BUGS AND LIMITATIONS | LICENSE AND COPYRIGHT
-script_sections = NAME | DESCRIPTION | USAGE | REQUIRED ARGUMENTS | AUTHOR | BUGS AND LIMITATIONS | LICENSE AND COPYRIGHT
+script_sections = NAME | DESCRIPTION | USAGE | AUTHOR | BUGS AND LIMITATIONS | LICENSE AND COPYRIGHT
 
 [CodeLayout::RequireTidyCode]
 perltidyrc = .perltidyrc
