--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ perl:
   - "5.12"
   - "5.10"
 before_install:
-  - cpanm -n Devel::Cover::Report::Coveralls Test::CheckManifest
+  - cpanm -n Test::CheckManifest Test::Perl::Critic
+  - cpanm -n Devel::Cover::Report::Coveralls
 script:
   - export RELEASE_TESTING=1
   - perl Build.PL && ./Build build && cover -test -report coveralls
