--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Original work (c) ECOLE POLYTECHNIQUE FEDERALE DE LAUSANNE, Switzerland, VPSI, 2017-2018.
+# Modified work (c) William Belle, 2018.
+# See the LICENSE file for more details.
+
 !Build/
 .last_cover_stats
 /META.yml
