run tests with trusty

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@
 # Modified work (c) William Belle, 2018.
 # See the LICENSE file for more details.
 
+dist: trusty
 language: perl
 perl:
   - "5.30"
